--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <header id="input">
-        <label for="ExampleInput">Enter Something:</label>
     </header>  
     <footer id="buttons">
         <button id="ac">AC</button>
@@ -27,7 +26,7 @@
         <button id="num">2</button>
         <button id="num">3</button>
         <button id="plus">+</button>
-        <button id="num">0</button>
+        <button id="num" class="zero">0</button>
         <button id="point">.</button>
         <button id="equal">=</button>
     </footer>  
