--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <title>Calculator</title>
 </head>
 <body>
-    <header id="input">
-    </header>  
-    <footer id="buttons">
-        <button id="ac">AC</button>
-        <button id="reverse">+/-</button>
-        <button id="percentage">%</button>
-        <button id="substract">/</button>
-        <button id="num">7</button>
-        <button id="num">8</button>
-        <button id="num">9</button>
-        <button id="multiply">x</button>
-        <button id="num">4</button>
-        <button id="num">5</button>
-        <button id="num">6</button>
-        <button id="minus">-</button>
-        <button id="num">1</button>
-        <button id="num">2</button>
-        <button id="num">3</button>
-        <button id="plus">+</button>
-        <button id="num" class="zero">0</button>
-        <button id="point">.</button>
-        <button id="equal">=</button>
-    </footer>  
+    <div class="calculator">
+        <input type="text" id="display" readonly>
+        <div class="buttons">
+            <button onclick="appendNumber('7')">7</button>
+            <button onclick="appendNumber('8')">8</button>
+            <button onclick="appendNumber('9')">9</button>
+            <button onclick="setOperation('+')">+</button>
+
+            <button onclick="appendNumber('4')">4</button>
+            <button onclick="appendNumber('5')">5</button>
+            <button onclick="appendNumber('6')">6</button>
+            <button onclick="setOperation('-')">-</button>
+
+            <button onclick="appendNumber('1')">1</button>
+            <button onclick="appendNumber('2')">2</button>
+            <button onclick="appendNumber('3')">3</button>
+            <button onclick="setOperation('*')">*</button>
+
+            <button onclick="appendNumber('0')">0</button>
+            <button onclick="clearDisplay()">C</button>
+            <button onclick="calculateResult()">=</button>
+            <button onclick="setOperation('/')">/</button>
+        </div>
+    </div>
+    <script src="main.js"></script>
 </body>
-<script src="main.js"></script>
-</html> 
+</html>
